p2ws_package/Devpp2ws-Package/objects/User.object
<CustomObject>
    <fields>
        <fullName>A_C_REG__c</fullName>
        <label>A/C REG</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>A_C_Type__c</fullName>
        <label>A/C Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Authorized_Department_EN__c</fullName>
        <label>Authorized Department EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Department_TH__c</fullName>
        <label>Authorized Department TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Position_EN__c</fullName>
        <label>Authorized Position EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Position_TH__c</fullName>
        <label>Authorized Position TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federation_ID__c</fullName>
        <description>for Crew Mapping Upload</description>
        <externalId>true</externalId>
        <inlineHelpText>for Crew Mapping Upload</inlineHelpText>
        <label>Federation ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flight_Schedule_Next_Hour__c</fullName>
        <label>Flight Schedule Next Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flight_Schedule_Previous_Hour__c</fullName>
        <label>Flight Schedule Previous Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_TH__c</fullName>
        <label>Name TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <label>Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Interval__c</fullName>
        <label>Refresh Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <defaultValue>&quot;BKK&quot;</defaultValue>
        <label>Station</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Federation_ID__c</columns>
        <columns>KNOWLEDGE_USER</columns>
        <columns>MOBILE_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>System</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Aircraft_Maintenance</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>LOCALE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>DT</value>
        </filters>
        <label>Aircraft Maintenance</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUATUsers</fullName>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>startsWith</operation>
            <value>uat</value>
        </filters>
        <label>All UAT Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>CFMS_Abroad</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>SR</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>SR</value>
        </filters>
        <label>CFMS Abroad</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Customer_Feedback</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>Station__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>LOCALE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>ST,D7,AO,S4,S3,SZR,HH,HA</value>
        </filters>
        <label>Customer Feedback</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Customer_Feedback_Chief</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>Station__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>LOCALE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>ST,D7,AO,S4,S3,SZR</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Chief</value>
        </filters>
        <label>Customer Feedback - Chief</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ground_Customer_Service</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>MANAGER</columns>
        <columns>LOCALE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.SAML_SUBJECT</field>
            <operation>startsWith</operation>
            <value>CSBKKKO</value>
        </filters>
        <filters>
            <field>CORE.USERS.SAML_SUBJECT</field>
            <operation>startsWith</operation>
            <value>CSBKKKK</value>
        </filters>
        <filters>
            <field>CORE.USERS.SAML_SUBJECT</field>
            <operation>startsWith</operation>
            <value>CSBKKKW</value>
        </filters>
        <filters>
            <field>CORE.USERS.SAML_SUBJECT</field>
            <operation>startsWith</operation>
            <value>CSBKKLL</value>
        </filters>
        <filters>
            <field>CORE.USERS.SAML_SUBJECT</field>
            <operation>startsWith</operation>
            <value>CSBKKLP</value>
        </filters>
        <label>Ground Customer Service</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Flight_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>startsWith</operation>
            <value>Air</value>
        </filters>
        <label>In-Flight Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Integration_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Integration</value>
        </filters>
        <label>Integration Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SZ</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>Station__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>LOCALE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>SZ</value>
        </filters>
        <label>SZ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SZR</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>Station__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>LOCALE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>SZR</value>
        </filters>
        <label>SZR</label>
        <language>en_US</language>
    </listViews>
</CustomObject>